--- a/templates/404.twig
+++ b/templates/404.twig
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Nicht gefunden</title>
-  <link rel="shortcut icon" href="img/icon.png" type="image/png">
+  <link rel="shortcut icon" href="/img/icon.png" type="image/png">
   <style>
   html {
     cursor: url(img/amiga.cur), auto;
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="img/guru.gif" alt="">
+    <img src="/img/guru.gif" alt="">
   </div>
   <script>
   window.onclick = function() {
