Generate URLs using named routes

--- a/templates/404.twig
+++ b/templates/404.twig
@@ -27,7 +27,7 @@
   </div>
   <script>
   window.onclick = function() {
-    location.href = '/';
+    location.href = '{{ path_for('home') }}';
   };
   </script>
 </body>
