--- a/templates/new.twig
+++ b/templates/new.twig
@@ -2,7 +2,7 @@
 {% block title %}Neuer Eintrag{% endblock %}
 {% block content %}
 
-<form role="form" data-toggle="validator" method="post" action="/expenses">
+<form role="form" data-toggle="validator" method="post" action="{{ path_for('createExpense') }}">
   {# Form #}
   <div class="row">
     <div class="col-md-12">
@@ -49,7 +49,7 @@
     <div class="col-md-12">
       <div class="btn-group" role="group">
         <button type="submit" class="btn btn-success">Speichern</button>
-        <a class="btn btn-danger" href="/" role="button">Zurück</a>
+        <a class="btn btn-danger" href="{{ path_for('home') }}" role="button">Zurück</a>
       </div>
     </div>
   </div>
