--- a/templates/overview.twig
+++ b/templates/overview.twig
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="btn-group" role="group">
-      <a class="btn btn-success" href="/expenses/new" role="button">Neuer Eintrag</a>
+      <a class="btn btn-success" href="{{ path_for('newExpense') }}" role="button">Neuer Eintrag</a>
       <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#filter">
         <i class="fa fa-filter"></i>
       </button>
