--- a/src/main/templates/expense.twig
+++ b/src/main/templates/expense.twig
@@ -1,42 +1,55 @@
 {% extends "base.twig" %}
-{% block title %}Neuer Eintrag{% endblock %}
+{% block title %}
+{% if action == constant('Action::New') %}
+Neuer Eintrag
+{% elseif action == constant('Action::Edit') %}
+Eintrag bearbeiten
+{% endif %}
+{% endblock %}
 {% block content %}
 
-<form role="form" data-toggle="validator" method="post" action="{{ path_for('createExpense') }}">
+<form role="form" data-toggle="validator" method="post" action="{{ action == constant('Action::New') ? path_for('createExpense') : action == constant('Action::Edit') ? path_for('updateExpense', {'id': expense.id}) }}">
+
   {# Form #}
   <div class="row">
     <div class="col-md-12">
+
       <div class="form-group">
         <label for="description">Beschreibung</label>
-        <input type="text" class="form-control" id="description" name="description" data-minlength="2" autofocus required>
+        <input type="text" value="{{ expense.description }}" class="form-control" id="description" name="description" data-minlength="2" autofocus required>
       </div>
+
       <div class="form-group">
         <label for="price">Preis</label>
         <div class="input-group">
-          <input type="text" class="form-control" id="price" name="price" pattern="^(?:[1-9]\d*|0)?(?:\.\d+)?$" required>
+          <input type="text" value="{{ expense.price }}" class="form-control" id="price" name="price" pattern="^(?:[1-9]\d*|0)?(?:\.\d+)?$" required>
           <div class="input-group-addon">&euro;</div>
         </div>
       </div>
+
       <div class="form-group">
         <label for="date">Datum</label>
-        <input type="date" class="form-control" id="date" name="date" value="{{ 'now' | date('Y-m-d') }}">
+        <input type="date" value="{{ action == constant('Action::New') ? 'now' | date('Y-m-d') : action == constant('Action::Edit') ? expense.date }}" class="form-control" id="date" name="date">
       </div>
+
       <div class="form-group">
         <label for="category">Kategorie</label>
         <select class="form-control" id="category" name="category">
           {% for category in categories %}
-          <option value="{{ category.id }}">{{ category.name }}</option>
+          <option value="{{ category.id }}" {{ category.id == expense.category.id ? 'selected' }}>{{ category.name }}</option>
           {% endfor %}
         </select>
       </div>
+
       <div class="form-group">
         <label for="person">Zuordnung</label>
         <select class="form-control" id="person" name="person">
           {% for person in persons %}
-          <option value="{{ person.id }}">{{ person.name }}</option>
+          <option value="{{ person.id }}" {{ person.id == expense.person.id ? 'selected' }}>{{ person.name }}</option>
           {% endfor %}
         </select>
       </div>
+
     </div>
   </div>
 
@@ -49,6 +62,7 @@
       </div>
     </div>
   </div>
+
 </form>
 
 {% endblock %}
