--- a/src/main/templates/404.twig
+++ b/src/main/templates/404.twig
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="/img/icon.png" type="image/png">
   <style>
   html {
-    cursor: url(img/amiga.cur), auto;
+    cursor: url(/img/amiga.cur), auto;
   }
   body {
     background: black;
