Remove tests and refactor sources

--- a/src/templates/expense.twig
+++ b/src/templates/expense.twig
@@ -56,10 +56,8 @@ Eintrag bearbeiten
   {# Button bar #}
   <div class="row">
     <div class="col-md-12">
-      <div class="btn-group" role="group">
-        <button type="submit" class="btn btn-success">Speichern</button>
-        <a class="btn btn-danger" href="{{ path_for('home') }}" role="button">Zurück</a>
-      </div>
+      <button type="submit" class="btn btn-success">Speichern</button>
+      <a class="btn btn-default" href="{{ path_for('home') }}" role="button">Zurück</a>
     </div>
   </div>
 
