--- a/src/templates/base.twig
+++ b/src/templates/base.twig
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="/img/icon.png" type="image/png">
   <link href="/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,500">
 </head>
 <body>
   <div class="container">
