--- a/src/templates/expense.twig
+++ b/src/templates/expense.twig
@@ -1,8 +1,8 @@
 {% extends "base.twig" %}
 {% block title %}
-{% if action == constant('Action::New') %}
+{% if action == 'new' %}
 Neuer Eintrag
-{% elseif action == constant('Action::Edit') %}
+{% elseif action == 'edit' %}
 Eintrag bearbeiten
 {% endif %}
 {% endblock %}
