--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,12 @@
 $font-weight-light: 300;
 $font-weight-bold: 500;
 
+$title-background-color: #5f5f5f;
+$title-text-color: #f1f1f1;
+
+$a-tags: 'a, a:active, a:hover, a:visited';
+$a-tags-hover: 'a:active, a:hover';
+
 body,
 h3, h4, h5, h6 {
   font-weight: $font-weight-light;
@@ -18,11 +24,35 @@ h1, h2,
   margin-top: 20px;
 }
 
+header, footer {
+  color: $title-text-color;
+  background-color: $title-background-color;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+header {
+  font-family: 'Cinzel', serif;
+  font-weight: 700;
+  font-size: 3em;
+}
+
+footer {
+  margin-top: 20px;
+  #{$a-tags} {
+    color: $title-text-color;
+    text-decoration: underline;
+  }
+  #{$a-tags-hover} {
+    text-decoration: none;
+  }
+}
+
 #overview {
   thead {
     th {
-      color: #fff;
-      background-color: #373a3c;
+      color: $title-text-color;
+      background-color: $title-background-color;
     }
   }
   tbody {
