--- a/src/templates/base.twig
+++ b/src/templates/base.twig
@@ -7,7 +7,7 @@
   <title>Finanzen - {% block title %}{% endblock %}</title>
   <link rel="shortcut icon" href="/img/icon.png" type="image/png">
   <link href="/css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,500">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel:700">
 </head>
