Update icon class name for GitHub

--- a/src/templates/base.twig
+++ b/src/templates/base.twig
@@ -35,7 +35,7 @@
       </p>
       <p>
         Source available at
-        <i class="fa fa-github" aria-hidden="true"></i>
+        <i class="fab fa-github" aria-hidden="true"></i>
         <a href="https://github.com/meonwax/finances" target="_blank">GitHub</a>
       </p>
     </div>
